--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,11 +23,40 @@
 #
 # Instead, surround them with single quotes.
 #
-# en:
+ en:
 #   'true': 'foo'
 #
 # To learn more, please read the Rails Internationalization guide
 # available at https://guides.rubyonrails.org/i18n.html.
 
-en:
-  hello: "Hello world"
+#en:
+ # hello: "Hello world"
+
+
+
+#ActiveRecord::Schema.define(version: 2021_06_08_172843) do
+
+ # create_table "finded_movies", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci", force: :cascade do |t|
+  #  t.integer "movie_code"
+   # t.bigint "user_id", null: false
+    #t.datetime "created_at", precision: 6, null: false
+    #t.datetime "updated_at", precision: 6, null: false
+    #t.index ["user_id"], name: "index_finded_movies_on_user_id"
+  #end
+
+  #create_table "users", options: "ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci", force: :cascade do |t|
+   # t.string "name"
+    #t.date "birthdate"
+   # t.string "email", default: "", null: false
+   # t.string "encrypted_password", default: "", null: false
+  #  t.string "reset_password_token"
+   # t.datetime "reset_password_sent_at"
+   # t.datetime "remember_created_at"
+   # t.datetime "created_at", precision: 6, null: false
+   # t.datetime "updated_at", precision: 6, null: false
+   # t.index ["email"], name: "index_users_on_email", unique: true
+   # t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
+ # end
+
+  #add_foreign_key "finded_movies", "users"
+#end
